# lambda-calculus-hs

./: .gitignore  CHANGELOG.md  Lambda-Cube.cabal  Main.hs  Makefile  README.md  SimplyTypedPresentation.cabal  Untyped.hs  cabal.project.profile  default.nix  flake.nix  justfile  lambda-calculus-hs.cabal  scripts.nix
.github/workflows/: cabal.yml  nix.yml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lib/: PrettyTerm.hs  TestHarness.hs  Utils.hs
main/: 00-SimplyTypedEvaluation.hs  01-BidirectionalTypechecking.hs  02-NormalizationByEvaluation.hs  03-Elaboration.hs  04-TypedHoles.hs  05-SystemT.hs  06-Records.hs  07-Subtyping.hs  07-SumTypes.hs  08-NominalInductiveTypes.hs  08-Subtyping.hs  09-NominalInductiveTypes.hs  09b-IsoInductiveTypes.hs  10-IsoInductiveTypes.hs  10-IsoRecursiveTypes.hs  10-SystemF.hs  11-MLTT.hs  12-TypeUniverses.hs  13-UniversePolymorphism.hs  LambdaPi.hs  SimplyTyped.hs  SimplyTypedElab.hs  SimplyTypedHindleyMilner.hs  SimplyTypedModules.hs  SimplyTypedNBE.hs  SimplyTypedPatterns.hs  SystemF.hs  SystemFOmega.hs  SystemOmega.hs  SystemT.hs  Untyped.hs
main/AbstractMachine/: Krivine.hs  STG.hs
main/new/: 00-SimplyTypedEvaluation.hs  01-BidirectionalTypechecking.hs  02-NormalizationByEvaluation.hs  03-Elaboration.hs
main/old/: LambdaPi.hs  MLTT.hs  SimplyTyped.hs  SimplyTypedElab.hs  SimplyTypedModules.hs  SimplyTypedNBE.hs  SimplyTypedPatterns.hs  SystemF.hs  SystemFOmega.hs  SystemOmega.hs  Untyped.hs  UntypedNBE.hs
presentation/: presentation.org  presentation.tex
presentation/_minted-presentation/: 1B966E50771954C0BC1AD0EDAF55C35DDCE7AD6C809F3498A5E218A58EF53DD8.pygtex  2932157D5022D22EBD99B6111BBBCC70DCE7AD6C809F3498A5E218A58EF53DD8.pygtex  62D56EEA1D7C8B4AFDEE123D6FAEC8BBDCE7AD6C809F3498A5E218A58EF53DD8.pygtex  637866623C10CE50C31BA06B808CCCB7DCE7AD6C809F3498A5E218A58EF53DD8.pygtex  97BC4BAFEB43EB5E5982F89FF686EF66DCE7AD6C809F3498A5E218A58EF53DD8.pygtex  B6214CDD373F61AC8A0BCF8B11472DBCDCE7AD6C809F3498A5E218A58EF53DD8.pygtex  borland.pygstyle
presentations/SimplyTypedPresentation/: presentation.org  presentation.tex
