cabal-version:       3.0
name:                lambda-calculus-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-settings
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData
  
  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules

executable Untyped
  import:              common-settings
  main-is:             Untyped.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable SimplyTyped
  import:              common-settings
  main-is:             SimplyTyped.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable SimplyTypedModules
  import:              common-settings
  main-is:             SimplyTypedModules.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable SimplyTypedPatterns
  import:              common-settings
  main-is:             SimplyTypedPatterns.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers, lens

executable SystemT
  import:              common-settings
  main-is:             SystemT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable SystemF
  import:              common-settings
  main-is:             SystemF.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers, lens

executable SystemOmega
  import:              common-settings
  main-is:             SystemOmega.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers, lens

executable SystemFOmega
  import:              common-settings
  main-is:             SystemFOmega.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers, lens

executable LambdaPi
  import:              common-settings
  main-is:             LambdaPi.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers, lens

executable UntypedNBE
  import:              common-settings
  main-is:             UntypedNBE.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable SimplyTypedNBE
  import:              common-settings
  main-is:             SimplyTypedNBE.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable SimplyTypedElab
  import:              common-settings
  main-is:             SimplyTypedElab.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable MLTT
  import:              common-settings
  main-is:             MLTT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers

executable 00-SimplyTypedEvaluation
  import:              common-settings
  main-is:             new/00-SimplyTypedEvaluation.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, containers