cabal-version:       3.0
name:                lambda-calculus-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-settings
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData
  
  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules

executable Untyped
  import:              common-settings
  main-is:             old/Untyped.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SimplyTyped
  import:              common-settings
  main-is:             old/SimplyTyped.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SimplyTypedModules
  import:              common-settings
  main-is:             old/SimplyTypedModules.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SimplyTypedPatterns
  import:              common-settings
  main-is:             old/SimplyTypedPatterns.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable SystemT
  import:              common-settings
  main-is:             old/SystemT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SystemF
  import:              common-settings
  main-is:             old/SystemF.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable SystemOmega
  import:              common-settings
  main-is:             old/SystemOmega.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable SystemFOmega
  import:              common-settings
  main-is:             old/SystemFOmega.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable LambdaPi
  import:              common-settings
  main-is:             old/LambdaPi.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable UntypedNBE
  import:              common-settings
  main-is:             old/UntypedNBE.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SimplyTypedNBE
  import:              common-settings
  main-is:             old/SimplyTypedNBE.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SimplyTypedElab
  import:              common-settings
  main-is:             old/SimplyTypedElab.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable MLTT
  import:              common-settings
  main-is:             old/MLTT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable 00-SimplyTypedEvaluation
  import:              common-settings
  main-is:             00-SimplyTypedEvaluation.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable 01-BidirectionalTypechecking
  import:              common-settings
  main-is:             01-BidirectionalTypechecking.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable 02-NormalizationByEvaluation
  import:              common-settings
  main-is:             02-NormalizationByEvaluation.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable 03-Elaboration
  import:              common-settings
  main-is:             03-Elaboration.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable 04-TypedHoles
  import:              common-settings
  main-is:             04-TypedHoles.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable 05-SystemT
  import:              common-settings
  main-is:             05-SystemT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers