cabal-version:       3.0
name:                lambda-calculus-hs
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Solomon Bothwell
maintainer:          ssbothwell@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common-settings
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DerivingStrategies
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    StrictData

  ghc-options:
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules
    -Wall
    -Wcpp-undef
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Werror=missing-home-modules

library utils
  import:              common-settings
  visibility:          private
  exposed-modules:     Utils
  hs-source-dirs:      lib
  build-depends:       base >= 2 && <5, these, semialign

library test-harness
  import:              common-settings
  visibility:          private
  exposed-modules:     TestHarness, PrettyTerm
  hs-source-dirs:      lib
  build-depends:       base >= 2 && <5, prettyprinter

executable Untyped
  import:              common-settings
  main-is:             old/Untyped.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SimplyTypedModules
  import:              common-settings
  main-is:             old/SimplyTypedModules.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable SimplyTypedPatterns
  import:              common-settings
  main-is:             old/SimplyTypedPatterns.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable SystemF
  import:              common-settings
  main-is:             old/SystemF.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable SystemOmega
  import:              common-settings
  main-is:             old/SystemOmega.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable SystemFOmega
  import:              common-settings
  main-is:             old/SystemFOmega.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable LambdaPi
  import:              common-settings
  main-is:             old/LambdaPi.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, lens

executable UntypedNBE
  import:              common-settings
  main-is:             old/UntypedNBE.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable MLTT
  import:              common-settings
  main-is:             old/MLTT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers

executable 00-SimplyTypedEvaluation
  import:              common-settings
  main-is:             00-SimplyTypedEvaluation.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, utils

executable 01-BidirectionalTypechecking
  import:              common-settings
  main-is:             01-BidirectionalTypechecking.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, test-harness, utils

executable 02-NormalizationByEvaluation
  import:              common-settings
  main-is:             02-NormalizationByEvaluation.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, test-harness, utils

executable 03-Elaboration
  import:              common-settings
  main-is:             03-Elaboration.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, test-harness, utils

executable 04-TypedHoles
  import:              common-settings
  main-is:             04-TypedHoles.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, test-harness, utils

executable 05-SystemT
  import:              common-settings
  main-is:             05-SystemT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, test-harness, utils

executable 06-Records
  import:              common-settings
  main-is:             06-Records.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, test-harness, utils

executable 07-SumTypes
  import:              common-settings
  main-is:             07-SumTypes.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, test-harness, utils

executable 08-Subtyping
  import:              common-settings
  main-is:             08-Subtyping.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, scientific, test-harness, utils

executable 09-NominalInductiveTypes
  import:              common-settings
  main-is:             09-NominalInductiveTypes.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, scientific, test-harness, utils

executable 09b-IsoInductiveTypes
  import:              common-settings
  main-is:             09b-IsoInductiveTypes.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, scientific, test-harness, utils

executable 10-SystemF
  import:              common-settings
  main-is:             10-SystemF.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, scientific, test-harness, utils

executable 11-MLTT
  import:              common-settings
  main-is:             11-MLTT.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, scientific, test-harness, utils

executable 12-TypeUniverses
  import:              common-settings
  main-is:             12-TypeUniverses.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, scientific, test-harness, utils

executable Krivine
  import:              common-settings
  main-is:             AbstractMachine/Krivine.hs
  hs-source-dirs:      main
  build-depends:       base >= 2 && <5, mtl, transformers, containers, these, semialign, scientific, test-harness, utils

